Fixed white space under content div in Entry

--- a/react-front-end/src/styles/index.css
+++ b/react-front-end/src/styles/index.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	/* background-color: #6fe4e8; */
-	background-image: url("https://www.transparenttextures.com/patterns/scribble-light.png");
+	/* background-image: url("https://www.transparenttextures.com/patterns/scribble-light.png"); */
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
